MODON MRE BPDEV/force-app/main/default/objects/SalesOrderEvent__e/SalesOrderEvent__e.object-meta.xml
<CustomObject>
    <label>Sales Order Event</label>
    <pluralLabel>Sales Order Events</pluralLabel>
</CustomObject>