MODON MRE BPDEV/force-app/main/default/objects/SalesOrderEvent__e/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>OwnerId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>