MODON MRE BPDEV/force-app/main/default/objects/SalesOrderEvent__e/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <label>Unit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>