MODON MRE BPDEV/force-app/main/default/objects/SalesOrderEvent__e/fields/UnitId__c.field-meta.xml
<CustomField>
    <fullName>UnitId__c</fullName>
    <label>UnitId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>